# esp32c6-nutrient-doser

./: .gitignore  Cargo.toml  cfg.base.toml  espflash.toml  partition-table.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml  rust_ci.yml
doser-cli/: doser.py  floragro_chart.json  pyproject.toml
doser-web/: docker-compose.yml  nuxt.config.ts  package.json  pnpm-lock.yaml
doser-web/app/: app.vue
doser-web/app/assets/: floragro_chart.json  floraseries.json  nutrients.json
doser-web/app/assets/css/: main.css
doser-web/app/components/: AddDoser.vue  DoserView.vue  MotorCalibration.vue  MotorCard.vue  NutrientChart.vue  SelectDoser.vue  TabSelect.vue
doser-web/app/components/root/: CalcApp.vue  DoserApp.vue
doser-web/app/pages/: index.vue
doser-web/app/types/: doser_api.d.ts
doser-web/app/utils/: api.ts  chart_helpers.ts  doser_api.ts
doser-web/server/api/: common.ts  dosers.delete.ts  dosers.get.ts  dosers.post.ts
doser-web/shared/types/: doser.d.ts  feedchart.d.ts
src/: app.rs  main.rs  rmt_drv8825.rs  util.rs
test/: test_reqs.http
