[package]
name = "nutrient-doser"
edition = "2021"
rust-version = "1.77"
version = "0.2.0"
authors = ["Kareem ElFaramawi <kareem02@gmail.com>"]
resolver = "2"

[dependencies]
anyhow = "1.0.98"
embedded-svc = "0.28.1"
axum = "0.8.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
http = "1.3.1"
http-serde-ext = "1.0.2"
log = "0.4"
mime = "0.3.17"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "net", "sync", "time"] }
toml-cfg = "0.2.0"
tower-http = { version = "0.6.6", features = ["cors"] }

[build-dependencies]
embuild = "0.33"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"
debug = true

[[bin]]
name = "nutrient-doser"
harness = false
required-features = []
