[package]
name = "nutrient-doser"
edition = "2021"
rust-version = "1.88"
version = "0.3.4"
authors = ["Kareem ElFaramawi <kareem02@gmail.com>"]
resolver = "2"

[package.metadata.scripts]
build = "cargo bump && cargo build --release"
build-ota = "cargo bump && cargo espflash save-image --release --chip esp32c6 ota.bin"

[dependencies]
anyhow = "1.0.100"
embedded-svc = "0.28.1"
axum = { version = "0.8.7", features = ["macros"] }
esp-idf-svc = "0.51.0"
http = "1.4.0"
http-serde-ext = "1.0.2"
log = "0.4.29"
mime = "0.3.17"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "net", "sync", "time"] }
toml-cfg = "0.2.0"
tower-http = { version = "0.6.8", features = ["cors"] }
ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }
smart-leds = "0.4.0"
stepgen = { git = "https://github.com/idubrov/stepgen", version = "0.1.3" }

[build-dependencies]
embuild = "0.33.1"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = "z"
debug = true

[[bin]]
name = "nutrient-doser"
harness = false
required-features = []
